Add update user role support