@@ -5,31 +5,15 @@ import java.util.*;
 
 /**
  * Base class for all Aggregate Roots.
- *
  * Responsibilities:
  *  1. Carries the aggregate's unique identity (UUID).
  *  2. Collects domain events raised during a business operation.
  *  3. Exposes pullEvents() so the application layer can
  *     drain and publish events after the aggregate is persisted.
- *
- * Usage in a concrete aggregate:
- *
- *   public class Secret extends AggregateRoot {
- *       public void rotate(SecretContent newContent) {
- *           this.content = newContent;
- *           registerEvent(new SecretRotated(UUID.randomUUID(), Instant.now(), this.getId()));
- *       }
- *   }
- *
- * In the use case:
- *   secret.rotate(newContent);
- *   secretRepository.save(secret);
- *   eventPublisher.publishAll(secret.pullEvents());
  */
 public abstract class AggregateRoot {
     private final UUID id;
     private final List<DomainEvent> domainEvents  = new ArrayList<>();
-
     public AggregateRoot(UUID id) {
         this.id = id;
     }
@@ -46,7 +30,7 @@ public abstract class AggregateRoot {
     }
 
     public List<DomainEvent> pullEvents() {
-        List<DomainEvent> events = Collections.unmodifiableList(new ArrayList<>(domainEvents));
+        List<DomainEvent> events = List.copyOf(domainEvents);
         domainEvents.clear();
         return events;
     }
